# echosurf

./: # To run both dashboards with default po.sh  .env.template  .gitpod.yml  EVOLUTION_TIMELINE.md  Echoevo.md  EmotionalMemory.md  FEATURES_2024-2025.md  GAMING_PERSONA_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  OCTOPUS_MYSTERY_PR.md  PRESERVATION_NOTES.md  QUICK_START.md  README-v1.md  README-v2.md  README.md  SNAPSHOT_v2.md  activity_regulation.py  activity_stream.py  adaptive_heartbeat.py  ai_integration.py  antikythera.py  auto-inc.yml  browser_interface.py  chat_interface.py  cognitive_architecture.py  cognitive_evolution.py  copilot_suggestions.py  cronbot.md  cronbot.py  cronbot.py.v0  cronbot.py.v1  cronbot.py.v2  deep_tree_echo-v2.py  deep_tree_echo.py  demo_gamer_persona.py  differential_emotion_theory.py  docker-entrypoint.sh  echo_evolution.py  echopilot.py  (+51 more)
.bolt/: prompt
.codesandbox/: tasks.json
.devcontainer/: Dockerfile  devcontainer-backup.json  devcontainerbkp.json  docker-compose.yml  docker-helper.sh  init-xserver.sh  startup.sh
.github/ISSUE_TEMPLATE/: octopus-case-logbook.md
.github/workflows/: codeql.yml  codeqladd.yml  cronbot.v3.yml  deno.yml  echopilot.yml  pylint.yml  request_payload.json  workflow-a.yml  workflow-b.yml  wrangler-deploy-pages.yml
activity_logs/emergency/: activity.json
activity_logs/heartbeat/: activity.json  last_heartbeat  stats.json
docker-simple/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
examples/: deep_tree_echo.vnpu
include/: vnpu.h
ml_cpp/: CMakeLists.txt  README.md
ml_cpp/benchmarks/: benchmark_inference.cpp
ml_cpp/cmake/: echosurf_ml_config.cmake.in
ml_cpp/include/: layers.h  model.h  model_loader.h  tensor.h
ml_cpp/python/: __init__.py  echosurf_ml.cpp
ml_cpp/scripts/: export_weights.py
ml_cpp/src/: layers.cpp  model.cpp  model_loader.cpp  tensor.cpp
ml_cpp/tests/: test_layers.cpp  test_model.cpp  test_tensor.cpp
src/: vnpu.l  vnpu.y  vnpu_runtime.c
todo/: Task_2503302146.json  Task_2504200322.json  Task_2504212307.json
wiki/: dashboard_guide.md  features.md
